# HouseBlend

./: .dockerignore  Dockerfile  LICENSE  README.md  dash_app.py  main.py  pyproject.toml  references.md  wsgi.py
HouseBlend/: HouseBlend.py  __init__.py
example/: HouseBlend_period_1_mailmerge.xlsx  contacts.xlsx  example_hansard.xlsx  example_usage.ipynb  schedule.xlsx
example/example/: example_HouseBlend_period_1_mailmerge.xlsx  example_hansard.xlsx
testing/: recursive_test.ipynb  runtime.ipynb
