[project]
name = "houseblend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "cvxpy>=1.8.1",
    "faker>=40.4.0",
    "gunicorn>=23.0.0",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
]
